<resources>
    <string name="app_name">Emina App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_here">Register Here</string>
    <string name="skip_login">Skip Login</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="news">News</string>
    <string name="location">Location</string>
    <string name="product">Products</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="saya_setuju_dengan_kebijakan_yang_berlaku">Saya setuju dengan kebijakan yang berlaku</string>
    <string name="continue_">Continue</string>
    <string name="trending_product">TRENDING PRODUCT</string>
    <string name="search">Search</string>
    <string name="make_up">Make Up</string>
    <string name="skin_care">Skin Care</string>
    <string name="body_care">Body Care</string>
    <string name="buy">Buy</string>
    <string name="lihat_cara_pemakaian">Lihat cara pemakaian</string>
    <string name="info">Information</string>
    <string name="beauty_points">Beauty points</string>
    <string name="my_barcode">My Barcode</string>
    <string name="logout">Logout</string>
    <string name="personal_info">Personal Info</string>
    <string name="gender">Gender</string>
    <string name="wardah_costumer">Wardah Costumer</string>
    <string name="instagram">Instagram</string>
    <string name="occupation">Occupation</string>
    <string name="phone_number">Phone Number</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="dob">Date of Birth</string>
    <string name="emina_product">EMiNA PRODUCT</string>
    <string name="login_terlebih_dahulu">Login terlebih dahulu</string>
    <string name="daftar">Daftar</string>
    <string name="kg">Kg</string>
</resources>