<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/logo_letter_emina"
        app:layout_constraintBottom_toTopOf="@+id/parentLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/bg_login_register">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/email"
            android:paddingHorizontal="32dp"
            app:errorEnabled="true"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingHorizontal="32dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/emailTextField"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/red"
            app:cornerRadius="14dp"
            app:layout_constraintTop_toBottomOf="@id/passwordTextField" />

        <LinearLayout
            android:id="@+id/parentRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="60dp"
            app:layout_constraintBottom_toTopOf="@id/btnSkipLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin">

            <TextView
                android:id="@+id/tvKet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_yet"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSkipLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="18dp"
            android:backgroundTint="@color/white"
            android:text="@string/skip_login"
            android:textColor="@color/red"
            app:cornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>