<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".ui.activity.DetailProductActivity">

    <TextView
        android:id="@+id/tvNameProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Emina Glossy Stain Liptint" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProduct"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="18dp"
        android:elevation="30dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNameProduct">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBuy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/buy"
        android:textColor="@color/red"
        app:cornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@+id/cvProduct"
        app:strokeColor="@color/dark_pink"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/tvDescProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBuy"
        tools:text="qwertyuiop qwertyuiop qweriop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop qwertyuiop " />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_login_register"
        android:paddingHorizontal="32dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescProduct">

        <TextView
            android:id="@+id/tvCaraPemakaian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_cara_pemakaian"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInfoKet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCaraPemakaian" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInfoKet"
            tools:text="100" />

        <TextView
            android:id="@+id/tvKetInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            app:layout_constraintLeft_toRightOf="@id/tvInfo"
            app:layout_constraintTop_toTopOf="@id/tvInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>