<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgAccount"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/pink"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_account" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvNameAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="26dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvBP"
                app:layout_constraintLeft_toRightOf="@id/cvAccount"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/cvAccount"
                tools:text="maulidanimahmud@gmail.com" />

            <TextView
                android:id="@+id/tvBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_pink"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/cvAccount"
                app:layout_constraintLeft_toLeftOf="@id/tvNameAccount"
                app:layout_constraintTop_toBottomOf="@id/tvNameAccount"
                tools:ignore="SmallSp"
                tools:text="100" />

            <TextView
                android:id="@+id/tvKetBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/beauty_points"
                android:textColor="@color/dark_pink"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/tvBP"
                app:layout_constraintLeft_toRightOf="@id/tvBP"
                app:layout_constraintTop_toTopOf="@id/tvBP"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvAccount" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/tvLogout" />

            <TextView
                android:id="@+id/tvPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/personal_info"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/dark_pink"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/emailTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:hint="@string/gender"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/dateBirthTextField"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateBirthTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:hint="@string/dob"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toRightOf="@id/genderTextField"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:hint="@string/phone_number"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/occupationTextField"
                app:layout_constraintTop_toBottomOf="@+id/genderTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/occupationTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:hint="@string/occupation"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toRightOf="@id/phoneNumberTextField"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/provinceTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:hint="@string/province"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/cityTextField"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cityTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:hint="@string/city"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toRightOf="@id/provinceTextField"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/instagramTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:hint="@string/instagram"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/wardahCostumerTextField"
                app:layout_constraintTop_toBottomOf="@+id/provinceTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wardahCostumerTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:hint="@string/wardah_costumer"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintLeft_toRightOf="@id/instagramTextField"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provinceTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brandIUseTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wardah_costumer"
                android:textColorHint="@color/dark_pink"
                app:layout_constraintTop_toBottomOf="@+id/instagramTextField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/parentNotLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/notLogin"
            layout="@layout/login_not_yet" />
    </LinearLayout>

</FrameLayout>